--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,7 +1,7 @@
 {
     "version": "2.0.0",
     "tasks": [{
-        "label": "build hello world",
+        "label": "build app",
         "type": "shell",
         "command": "g++",
         "args": [
