--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,19 @@
 {
     "version": "2.0.0",
-    "tasks": [{
-        "label": "build app",
-        "type": "shell",
-        "command": "g++",
-        "args": [
-            "-g", "Main.cpp"
-        ],
-        "group": {
-            "kind": "build",
-            "isDefault": true
+    "tasks": [
+        {
+            "label": "build app",
+            "type": "shell",
+            "command": "g++",
+            "args": [
+                "-g",
+                "$(pkg-config --cflags --libs opencv)",
+                "Main.cpp"
+            ],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
-    }]
+    ]
 }
